# high-command-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  REORGANIZATION_SUMMARY.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-http.txt  requirements-kubernetes.txt  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: auto-approve.yml  docker.yml  tests.yml
docs/: API.md  CODE_REVIEW.md  COMPLETION_REPORT.md  COPILOT_REVIEW.md  DEVELOPMENT_PROMPTS.md  DEVELOPMENT_RESOURCES.md  ENDPOINT_EXPANSION.md  GETTING_STARTED.md  HELLDIVERS2_LINGO.md  HTTP_KUBERNETES_QUICKSTART.md  INDEX.md  ITERATION_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_IMPLEMENTATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  SETUP.md  TROUBLESHOOTING.md  VSCODE_QUICKREF.md  VSCODE_SETUP.md
highcommand/: README.md  __init__.py  api_client.py  models.py  server.py  tool_registry.py  tools.py
k8s/: deployment.yaml  hpa.yaml  network-policy.yaml  rbac.yaml  service.yaml
scripts/: check_campaigns.py  check_pagination.py  check_structure.py  cleanup_root.sh  debug_api.py  discover_endpoints.py  list_tools.py  run_server.py  setup_copilot_review.sh  test_all_endpoints.py  test_api.py  test_api_data.py  test_imports.py  test_new_endpoints.py  verify_project.py
tests/: demo_all_endpoints.py  demo_new_endpoints.py  test_api_client.py  test_models.py  test_server.py  test_tool_registry.py  test_tools.py
